# django-admin-forge

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: create-release.yml  publish-pypi.yml
demo/config/: settings.py  urls.py
demo/demo_app/: admin.py  models.py
demo/demo_app/migrations/: 0001_initial.py  0002_subscription_apikey_invoice.py
docs/: README.md  architecture.md  configuration.md  roadmap.md
src/django_admin_forge/: __init__.py  admin.py  alerts.py  apps.py  conf.py  hooks.py  site.py  urls.py
src/django_admin_forge/contrib/: __init__.py  auth_admin.py
src/django_admin_forge/static/django_admin_forge/css/: forge.css
src/django_admin_forge/static/django_admin_forge/js/: theme.js
src/django_admin_forge/templates/admin/: actions.html  base_site.html  change_form.html  change_list.html  forge_applications.html  forge_dashboard.html  forge_logged_out.html  login.html  password_change_done.html  password_change_form.html  submit_line.html
src/django_admin_forge/templates/admin/auth/user/: add_form.html
src/django_admin_forge/templates/admin/forge/cards/: system_health.html
src/django_admin_forge/templates/admin/includes/: fieldset.html  forge_sidebar.html  forge_topbar.html
src/django_admin_forge/templatetags/: forge_icons.py
src/django_forge/: __init__.py  admin.py  apps.py  conf.py  hooks.py  icons.py  site.py  urls.py  views.py
src/django_forge/static/django_forge/css/: forge.css
src/django_forge/static/django_forge/js/: theme.js
src/django_forge/templates/admin/: base_site.html  change_form.html  change_list.html  change_list_results.html  forge_applications.html  forge_dashboard.html  login.html  password_change_done.html
src/django_forge/templates/admin/forge/cards/: system_health.html
src/django_forge/templates/admin/includes/: fieldset.html  forge_sidebar.html  forge_topbar.html
src/django_forge/templatetags/: forge_icons.py
tests/: settings.py  test_forge_nav.py  test_forge_user_admin.py  test_logout_view.py  test_menu_tabs.py  test_needs_attention.py  test_site.py  urls.py
