[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-forge"
version = "0.1.0"
description = "A modern, extensible, premium Django admin framework."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "django-admin-forge contributors" }
]
keywords = ["django", "admin", "dashboard", "saas", "internal-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "Django>=4.2,<6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "ruff>=0.6",
  "build>=1.2",
]
publish = [
  "build>=1.2",
  "twine>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/django-admin-forge"
Documentation = "https://github.com/your-org/django-admin-forge/docs"
Repository = "https://github.com/your-org/django-admin-forge"
Issues = "https://github.com/your-org/django-admin-forge/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
django_admin_forge = [
  "templates/**/*.html",
  "static/**/*",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src"]
testpaths = ["tests"]
